--- a/minggu2/biodata1.html
+++ b/minggu2/biodata1.html
@@ -39,7 +39,7 @@
     </script>
 
     <link rel="shortcut icon" href="https://dinus.ac.id/img/icon.ico">
-    <title>Universitas Dian Nuswantoro [UDINUS] | Student's Detail</title>
+    <title>Biodataku</title>
 
     <!-- link alternate https (Protocol-relative URL) -->
     <!-- Bootstrap -->
