--- a/minggu11/array-hapus-depan.html
+++ b/minggu11/array-hapus-depan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Mengambil data dari depan</title>
+ <title>Menghapus data dari depan</title>
 </head>
 <body>
  <script>
