--- a/minggu13/ajax-1.html
+++ b/minggu13/ajax-1.html
@@ -7,22 +7,41 @@
  <title>Belajar Dasar Ajax</title>
 </head>
 <body>
- <h1>Tutorial Ajax</h1>
+ <h1>Tutorial Ajax <button id="btn-clear"
+onclick="clearResult()">Clear</button></h1>
  <div id="hasil"></div>
- <button onclick="loadContent()">Load Content</button>
+ <button id="button" onclick="loadContent()">Load Content</button>
  <script>
- function loadContent(){
+ function loadContent() {
  var xhr = new XMLHttpRequest();
- var url = "https://devel.dinustech.com/aboe/materi/data/kode.json";
- xhr.onreadystatechange = function(){
- if(this.readyState == 4 && this.status == 200){
- document.getElementById("hasil").innerHTML =
-this.responseText;
+ var url = "http://localhost/ajax_files/kode.json";
+ xhr.onloadstart = function () {
+ document.getElementById("button").innerHTML = "Loading...";
+ }
+ xhr.onerror = function () {
+ alert("Gagal mengambil data");
+ };
+ xhr.onloadend = function () {
+ if (this.responseText !== "") {
+ var data = JSON.parse(this.responseText);
+ var img = document.createElement("img");
+ img.src = data.avatar_url;
+ var name = document.createElement("h3");
+ name.innerHTML = data.name;
+ document.getElementById("hasil").append(img, name);
+ document.getElementById("button").innerHTML = "Done";
+ setTimeout(function () {
+ document.getElementById("button").innerHTML = "Load
+Lagi";
+ }, 3000);
  }
  };
- xhr.open("GET", url, true);
+  xhr.open("GET", url, true);
  xhr.send();
  }
-    </script>
+ function clearResult() {
+ document.getElementById("hasil").innerHTML = "";
+ }
+ </script>
 </body>
 </html>
