--- a/minggu13/ajax-1.html
+++ b/minggu13/ajax-1.html
@@ -14,7 +14,7 @@ onclick="clearResult()">Clear</button></h1>
  <script>
  function loadContent() {
  var xhr = new XMLHttpRequest();
- var url = "http://localhost/ajax_files/kode.json";
+ var url = "https://github.com/radityahakiim/pem-web2021/raw/main/minggu13/kode.json";
  xhr.onloadstart = function () {
  document.getElementById("button").innerHTML = "Loading...";
  }
