--- a/minggu13/ajax-1.html
+++ b/minggu13/ajax-1.html
@@ -10,11 +10,11 @@
  <h1>Tutorial Ajax <button id="btn-clear"
 onclick="clearResult()">Clear</button></h1>
  <div id="hasil"></div>
- <button id="button" onclick="loadContent()">Load Content</button>
+ <button id="button" onclick="loadContent()"">Load Content</button>
  <script>
  function loadContent() {
- var xhr = new XMLHttpRequest();
- var url = "https://github.com/radityahakiim/pem-web2021/raw/main/minggu13/kode.json";
+ const xhr = new XMLHttpRequest();
+ var url = "https://raw.githubusercontent.com/radityahakiim/pem-web2021/main/minggu13/kode.json";
  xhr.onloadstart = function () {
  document.getElementById("button").innerHTML = "Loading...";
  }
@@ -24,15 +24,14 @@ onclick="clearResult()">Clear</button></h1>
  xhr.onloadend = function () {
  if (this.responseText !== "") {
  var data = JSON.parse(this.responseText);
- var img = document.createElement("img");
- img.src = data.avatar_url;
+ const img = document.createElement("img");
+ img.src = "https://previews.123rf.com/images/dstarky/dstarky1701/dstarky170101187/69424051-coding-icon-or-logo-in-modern-line-style-high-quality-black-outline-pictogram-for-web-site-design-an.jpg";
  var name = document.createElement("h3");
  name.innerHTML = data.name;
  document.getElementById("hasil").append(img, name);
  document.getElementById("button").innerHTML = "Done";
  setTimeout(function () {
- document.getElementById("button").innerHTML = "Load
-Lagi";
+ document.getElementById("button").innerHTML = "Load Lagi";
  }, 3000);
  }
  };
