--- a/minggu13/ajax-jquery.html
+++ b/minggu13/ajax-jquery.html
@@ -6,8 +6,7 @@
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <title>Belajar AJAX dengan JQuery</title>
  <script>
-src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></scr
-ipt>
+src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
  <h1>Load Data</h1>
